--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     </div>
     <!-- End Navbar Area -->
     <div class="first-section">
-      <div class="featured-area pt-100 pb-70">
+      <div class="featured-area pt-1 pb-70">
         <div class="container slider-home text-center">
-            Home Made Food
+            Home <br />Made Food
           </div>
         </div>
       </div>
