--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <!-- Pre Loader -->
-    <div id="preloader">
+    <!-- <div id="preloader">
       <div id="preloader-area">
         <div class="spinner"></div>
         <div class="spinner"></div>
@@ -45,7 +45,7 @@
       </div>
       <div class="preloader-section preloader-left"></div>
       <div class="preloader-section preloader-right"></div>
-    </div>
+    </div> -->
     <!-- End Pre Loader -->
 
     <!-- Start Navbar Area -->
@@ -103,14 +103,103 @@
       </div>
     </div>
     <!-- End Navbar Area -->
-    <div class="first-section">
-      <div class="featured-area pt-1 pb-70">
-        <div class="container slider-home text-center">
-            Home <br />Made Food
+
+    <div class="featured-area pt-10 first-section">
+      <div style="position: absolute; left: 20px; top: 70px">
+        <img class="img-header" src="/assets/images/home-header.png" />
+      </div>
+      <div
+        style="
+          background-color: #60ba62;
+          width: 30px;
+          height: 30px;
+          border-radius: 15px;
+          position: relative;
+          right: 25%;
+          top: 15%;
+        "
+      >
+        &nbsp;
+      </div>
+      <div
+        style="
+          background-color: #60ba62;
+          width: 10px;
+          height: 10px;
+          border-radius: 5px;
+          position: relative;
+          right: 15%;
+          top: 45%;
+        "
+      >
+        &nbsp;
+      </div>
+      <div class="container slider-home text-center">Home <br />Made Food</div>
+      <div
+        style="
+          background-color: #60ba62;
+          width: 10px;
+          height: 10px;
+          border-radius: 5px;
+          position: relative;
+          right: 88%;
+          top: -5%;
+        "
+      >
+        &nbsp;
+      </div>
+      <div
+        style="
+          background-color: #60ba62;
+          width: 30px;
+          height: 30px;
+          border-radius: 15px;
+          position: relative;
+          right: 80%;
+          top: 7%;
+        "
+      >
+        &nbsp;
+      </div>
+
+      <div style="position: relative; padding-right: 20px; bottom: 20%">
+        <img class="img-footer" src="/assets/images/home-header-bottom.png" />
+      </div>
+    </div>
+
+    <div class="featured-area pt-100 pb-70">
+      <div class="container">
+        <div class="row align-items-center mb-45">
+          <div class="col-lg-12 col-md-12">
+            <div
+              style="
+                background-color: #60ba62;
+                width: 50px;
+                height: 50px;
+                border-radius: 25px;
+                position: relative;
+                right: 97%;
+                top: -27px;
+              "
+            >
+              &nbsp;
+            </div>
+            <div class="section-title text-center mt-rs-20">
+              <span class="header-text">من نحن؟</span>
+
+              <p class="text-26">
+                إن HMF تطبيق يقدم لكم لأول مرة أكبر تجمع للأسر المنتجة لأجود
+                المنتجات الغذائية، من خلالنا تستطيع تقديم خدمات تجارية ناجحة و
+                مربحة. نساعدكم في الوصول لأشهى وأطيب الأطباق المحضرة منزلياً على
+                بعد أمتار منكم نود أن نشارككم اللحظة الفريدة لتذوق ما تبرع في
+                صنعه الأيادي الماهرة.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Footer Area -->
     <footer class="footer-area">
       <div class="container pt-10 pb-0">
