--- a/index.html
+++ b/index.html
@@ -200,6 +200,37 @@
       </div>
     </div>
 
+    <div class="featured-area pt-100 pb-70">
+      <div class="container">
+        <div class="row align-items-center mb-45">
+          <div class="col-lg-12 col-md-12">
+            <div
+              style="
+                background-color: #60ba62;
+                width: 50px;
+                height: 50px;
+                border-radius: 25px;
+                position: relative;
+                right: 97%;
+                top: -27px;
+              "
+            >
+              &nbsp;
+            </div>
+            <div class="section-title text-center mt-rs-20">
+              <span class="header-text-second">أسئلة شائعة ؟</span>
+              <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
+              <p class="text-26-des">
+                نعمل كوسيط بين الأسر المنتجة والعميل وقد تتوفر لدى بعض الأسر
+                المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
+                في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer Area -->
     <footer class="footer-area">
       <div class="container pt-10 pb-0">
