--- a/faq.html
+++ b/faq.html
@@ -106,140 +106,12 @@
     </div>
     <!-- End Navbar Area -->
 
-    <div class="featured-area pt-10 first-section">
-      <div style="position: absolute; left: 20px; top: 70px">
-        <img class="img-header" src="/assets/images/home-header.png" />
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 25%;
-          top: 15%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 10px;
-          height: 10px;
-          border-radius: 5px;
-          position: relative;
-          right: 15%;
-          top: 45%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div class="container slider-home text-center">Home <br />Made Food</div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 10px;
-          height: 10px;
-          border-radius: 5px;
-          position: relative;
-          right: 88%;
-          top: -5%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 80%;
-          top: 7%;
-        "
-      >
-        &nbsp;
-      </div>
-
-      <div style="position: relative; padding-right: 20px; bottom: 20%">
-        <img class="img-footer" src="/assets/images/home-header-bottom.png" />
-      </div>
-    </div>
-
-    <div class="featured-area pt-100 pb-70">
-      <div class="container">
-        <div class="row align-items-center mb-45">
-          <div class="col-lg-12 col-md-12">
-            <div
-              style="
-                background-color: #60ba62;
-                width: 50px;
-                height: 50px;
-                border-radius: 25px;
-                position: relative;
-                right: 97%;
-                top: -27px;
-              "
-            >
-              &nbsp;
-            </div>
-            <div class="section-title text-center mt-rs-20">
-              <span class="header-text">من نحن؟</span>
-
-              <p class="text-26">
-                إن HMF تطبيق يقدم لكم لأول مرة أكبر تجمع للأسر المنتجة لأجود
-                المنتجات الغذائية، من خلالنا تستطيع تقديم خدمات تجارية ناجحة و
-                مربحة. نساعدكم في الوصول لأشهى وأطيب الأطباق المحضرة منزلياً على
-                بعد أمتار منكم نود أن نشارككم اللحظة الفريدة لتذوق ما تبرع في
-                صنعه الأيادي الماهرة.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 5%;
-          top: 0%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #ebebeb;
-          width: 206px;
-          height: 206px;
-          border-radius: 103px;
-          position: relative;
-          right: 5%;
-          top: 40px;
-        "
-      >
-        &nbsp;
-      </div>
-    </div>
-
     <div class="featured-area pt-100 mb-100 pb-70">
-      <div style="position: absolute; left: 0px; z-index: 100">
-        <img src="./assets/images/hand.png" style="width: 350px" alt="img" />
-      </div>
       <div class="container">
         <div style="position: absolute; left: 60px">
-          <img
-            src="./assets/images/third-top.png"
-            style="width: 200px"
-            alt="img"
-          />
+          <img src="./assets/images/faq.png" style="width: 270px" alt="img" />
         </div>
+
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
             <div
@@ -256,27 +128,15 @@
               &nbsp;
             </div>
             <div class="section-title pt-100 text-center mt-rs-20">
-              <span class="header-text-second">أسئلة شائعة ؟</span>
+              <span class="header-text-second-faq"> أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
-              <div style="position: absolute; left: 50px; top: 150px">
-                <img
-                  src="./assets/images/fourth-img.png"
-                  style="width: 270px"
-                  alt="img"
-                />
-              </div>
+
               <p class="text-26-des">
                 نعمل كوسيط بين الأسر المنتجة والعميل وقد تتوفر لدى بعض الأسر
                 المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
                 في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
               </p>
-              <div style="position: absolute; right: -60px; bottom: -120px">
-                <img
-                  src="./assets/images/fourth.png"
-                  style="width: 200px"
-                  alt="img"
-                />
-              </div>
+
               <div
                 style="
                   background-color: #60ba62;
@@ -291,7 +151,20 @@
                 &nbsp;
               </div>
             </div>
-
+            <div style="position: absolute; right: -33px; bottom: 20px">
+              <img
+                src="./assets/images/fourth.png"
+                style="width: 200px"
+                alt="img"
+              />
+            </div>
+            <div style="position: absolute; right: 84px; bottom: -65px">
+              <img
+                src="./assets/images/pic-faq.png"
+                style="width: 200px"
+                alt="img"
+              />
+            </div>
             <div
               style="
                 background-color: #ebebeb;
@@ -354,7 +227,7 @@
             width: 489px;
             height: 625px;
             position: absolute;
-            right: 1%;
+            right: 28%;
             top: 0%;
           "
         >
@@ -378,7 +251,7 @@
             width: 489px;
             height: 625px;
             position: absolute;
-            left: 3%;
+            left: 28%;
             top: 0%;
           "
         >
