--- a/home.html
+++ b/home.html
@@ -71,7 +71,19 @@
               <img src="assets/images/logo.png" class="logo-one" alt="Logo" />
               <img src="assets/images/logo.png" class="logo-two" alt="Logo" />
             </a>
-
+            <div
+              style="
+                background-color: #60ba62;
+                width: 50px;
+                height: 50px;
+                border-radius: 25px;
+                position: absolute;
+                left: 20px;
+                top: 40px;
+              "
+            >
+              &nbsp;
+            </div>
             <div
               class="collapse navbar-collapse mean-menu"
               id="navbarSupportedContent"
@@ -106,86 +118,29 @@
     </div>
     <!-- End Navbar Area -->
 
-    <div class="featured-area pt-10 first-section">
-      <div style="position: absolute; left: 20px; top: 70px">
-        <img class="img-header" src="/assets/images/home-header.png" />
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 25%;
-          top: 15%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 10px;
-          height: 10px;
-          border-radius: 5px;
-          position: relative;
-          right: 15%;
-          top: 45%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div class="container slider-home text-center">Home <br />Made Food</div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 10px;
-          height: 10px;
-          border-radius: 5px;
-          position: relative;
-          right: 88%;
-          top: -5%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 80%;
-          top: 7%;
-        "
-      >
-        &nbsp;
-      </div>
-
-      <div style="position: relative; padding-right: 20px; bottom: 20%">
-        <img class="img-footer" src="/assets/images/home-header-bottom.png" />
-      </div>
-    </div>
-
     <div class="featured-area pt-100 pb-70">
       <div class="container">
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
             <div
-              style="
-                background-color: #60ba62;
-                width: 50px;
-                height: 50px;
-                border-radius: 25px;
-                position: relative;
-                right: 97%;
-                top: -27px;
-              "
+              style="position: absolute; left: 0px; bottom: 400px; z-index: 100"
             >
-              &nbsp;
+              <img
+                src="./assets/images/had.png"
+                style="width: 280px"
+                alt="img"
+              />
             </div>
+            <div
+              style="position: absolute; left: 0px; bottom: 100px; z-index: 100"
+            >
+              <img
+                src="./assets/images/hand.png"
+                style="width: 350px"
+                alt="img"
+              />
+            </div>
+
             <div class="section-title text-center mt-rs-20">
               <span class="header-text">من نحن؟</span>
 
@@ -200,6 +155,7 @@
           </div>
         </div>
       </div>
+
       <div
         style="
           background-color: #60ba62;
@@ -229,9 +185,6 @@
     </div>
 
     <div class="featured-area pt-100 mb-100 pb-70">
-      <div style="position: absolute; left: 0px; z-index: 100">
-        <img src="./assets/images/hand.png" style="width: 350px" alt="img" />
-      </div>
       <div class="container">
         <div style="position: absolute; left: 60px">
           <img
