--- a/app.html
+++ b/app.html
@@ -71,19 +71,7 @@
               <img src="assets/images/logo.png" class="logo-one" alt="Logo" />
               <img src="assets/images/logo.png" class="logo-two" alt="Logo" />
             </a>
-            <div
-              style="
-                background-color: #60ba62;
-                width: 50px;
-                height: 50px;
-                border-radius: 25px;
-                position: absolute;
-                left: 20px;
-                top: 40px;
-              "
-            >
-              &nbsp;
-            </div>
+
             <div
               class="collapse navbar-collapse mean-menu"
               id="navbarSupportedContent"
@@ -118,81 +106,12 @@
     </div>
     <!-- End Navbar Area -->
 
-    <div class="featured-area pt-100 pb-70">
-      <div class="container">
-        <div class="row align-items-center mb-45">
-          <div class="col-lg-12 col-md-12">
-            <div
-              style="position: absolute; left: 0px; bottom: 400px; z-index: 100"
-            >
-              <img
-                src="./assets/images/had.png"
-                style="width: 280px"
-                alt="img"
-              />
-            </div>
-            <div
-              style="position: absolute; left: 0px; bottom: 100px; z-index: 100"
-            >
-              <img
-                src="./assets/images/hand.png"
-                style="width: 350px"
-                alt="img"
-              />
-            </div>
-
-            <div class="section-title text-center mt-rs-20">
-              <span class="header-text">من نحن؟</span>
-
-              <p class="text-26">
-                إن HMF تطبيق يقدم لكم لأول مرة أكبر تجمع للأسر المنتجة لأجود
-                المنتجات الغذائية، من خلالنا تستطيع تقديم خدمات تجارية ناجحة و
-                مربحة. نساعدكم في الوصول لأشهى وأطيب الأطباق المحضرة منزلياً على
-                بعد أمتار منكم نود أن نشارككم اللحظة الفريدة لتذوق ما تبرع في
-                صنعه الأيادي الماهرة.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 5%;
-          top: 0%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #ebebeb;
-          width: 206px;
-          height: 206px;
-          border-radius: 103px;
-          position: relative;
-          right: 5%;
-          top: 40px;
-        "
-      >
-        &nbsp;
-      </div>
-    </div>
-
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="container">
         <div style="position: absolute; left: 60px">
-          <img
-            src="./assets/images/third-top.png"
-            style="width: 200px"
-            alt="img"
-          />
+          <img src="./assets/images/faq.png" style="width: 270px" alt="img" />
         </div>
+
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
             <div
@@ -209,27 +128,15 @@
               &nbsp;
             </div>
             <div class="section-title pt-100 text-center mt-rs-20">
-              <span class="header-text-second">أسئلة شائعة ؟</span>
+              <span class="header-text-second-faq"> أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
-              <div style="position: absolute; left: 50px; top: 150px">
-                <img
-                  src="./assets/images/fourth-img.png"
-                  style="width: 270px"
-                  alt="img"
-                />
-              </div>
+
               <p class="text-26-des">
                 نعمل كوسيط بين الأسر المنتجة والعميل وقد تتوفر لدى بعض الأسر
                 المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
                 في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
               </p>
-              <div style="position: absolute; right: -60px; bottom: -120px">
-                <img
-                  src="./assets/images/fourth.png"
-                  style="width: 200px"
-                  alt="img"
-                />
-              </div>
+
               <div
                 style="
                   background-color: #60ba62;
@@ -244,7 +151,20 @@
                 &nbsp;
               </div>
             </div>
-
+            <div style="position: absolute; right: -33px; bottom: 20px">
+              <img
+                src="./assets/images/fourth.png"
+                style="width: 200px"
+                alt="img"
+              />
+            </div>
+            <div style="position: absolute; right: 84px; bottom: -65px">
+              <img
+                src="./assets/images/pic-faq.png"
+                style="width: 200px"
+                alt="img"
+              />
+            </div>
             <div
               style="
                 background-color: #ebebeb;
@@ -262,83 +182,7 @@
         </div>
       </div>
     </div>
-    <div class="testimonials-area pb-100 mb-5">
-      <div class="container">
-        <div
-          style="
-            background-color: #60ba62;
-            width: 30px;
-            height: 30px;
-            border-radius: 15px;
-            position: relative;
-            right: 5%;
-            top: 5%;
-          "
-        >
-          &nbsp;
-        </div>
-        <div class="section-title mb-45 slider-home-testimonial text-center">
-          أراء العملاء
-        </div>
-        <div class="testimonials-slider owl-carousel owl-theme">
-          <div class="testimonials-item">
-            <img src="assets/images/pic.png" alt="testimonials" />
 
-            <p>
-              هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
-              هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
-              العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
-              التطبيق.
-            </p>
-          </div>
-          <div class="testimonials-item">
-            <img src="assets/images/pic.png" alt="testimonials" />
-
-            <p>
-              هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
-              هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
-              العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
-              التطبيق.
-            </p>
-          </div>
-        </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            right: 1%;
-            top: 0%;
-          "
-        >
-          <img src="./assets/images/man.png" />
-        </div>
-        <div
-          style="
-            background-color: #ebebeb;
-            width: 206px;
-            height: 206px;
-            border-radius: 103px;
-            position: relative;
-            right: 99%;
-            top: 10px;
-          "
-        >
-          &nbsp;
-        </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            left: 3%;
-            top: 0%;
-          "
-        >
-          <img src="./assets/images/female.png" />
-        </div>
-      </div>
-    </div>
     <!-- Footer Area -->
     <footer class="footer-area">
       <div class="container pt-10 pb-0">
