--- a/faq.html
+++ b/faq.html
@@ -92,11 +92,11 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="#" class="nav-link"> تواصل معنا </a>
+                  <a href="contact-us.html" class="nav-link"> تواصل معنا </a>
                 </li>
 
                 <li class="nav-item">
-                  <a href="#" class="nav-link"> حمل التطبيق </a>
+                  <a href="app.html" class="nav-link"> حمل التطبيق </a>
                 </li>
               </ul>
             </div>
