--- a/app.html
+++ b/app.html
@@ -96,7 +96,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="app.html" class="nav-link"> حمل التطبيق </a>
+                  <a href="app.html" class="nav-link active"> حمل التطبيق </a>
                 </li>
               </ul>
             </div>
@@ -108,6 +108,32 @@
 
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="container">
+        <div
+          style="
+            background-color: #60ba62;
+            width: 50px;
+            height: 50px;
+            border-radius: 25px;
+            position: absolute;
+            left: 5%;
+            top: 44%;
+          "
+        >
+          &nbsp;
+        </div>
+        <div
+          style="
+            background-color: #ebebeb;
+            width: 148px;
+            height: 148px;
+            border-radius: 74px;
+            position: absolute;
+            left: 75px;
+            top: 200px;
+          "
+        >
+          &nbsp;
+        </div>
         <div style="position: absolute; left: 60px">
           <img src="./assets/images/faq.png" style="width: 270px" alt="img" />
         </div>
@@ -128,55 +154,76 @@
               &nbsp;
             </div>
             <div class="section-title pt-100 text-center mt-rs-20">
-              <span class="header-text-second-faq"> أسئلة شائعة ؟</span>
-              <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
-
-              <p class="text-26-des">
-                نعمل كوسيط بين الأسر المنتجة والعميل وقد تتوفر لدى بعض الأسر
-                المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
-                في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
-              </p>
-
-              <div
-                style="
-                  background-color: #60ba62;
-                  width: 20px;
-                  height: 20px;
-                  border-radius: 10px;
-                  position: absolute;
-                  left: -100px;
-                  bottom: 20px;
-                "
-              >
-                &nbsp;
+              <div class="row">
+                <div class="col-lg-6">
+                  <h1
+                    style="
+                      font-size: 44px;
+                      color: #959494;
+                      font-family: 'SSTBold';
+                      text-align: center;
+                    "
+                  >
+                    متجر قوقل
+                  </h1>
+                  <div class="">
+                    <img class="google" src="./assets/images/google.png" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <h1
+                    style="
+                      font-size: 44px;
+                      color: #959494;
+                      font-family: 'SSTBold';
+                      text-align: center;
+                    "
+                  >
+                    متجر أبل
+                  </h1>
+                  <div class="">
+                    <img class="apple" src="./assets/images/apple.png" />
+                  </div>
+                </div>
               </div>
             </div>
-            <div style="position: absolute; right: -33px; bottom: 20px">
-              <img
-                src="./assets/images/fourth.png"
-                style="width: 200px"
-                alt="img"
-              />
-            </div>
-            <div style="position: absolute; right: 84px; bottom: -65px">
-              <img
-                src="./assets/images/pic-faq.png"
-                style="width: 200px"
-                alt="img"
-              />
+            <div
+              style="
+                background-color: #60ba62;
+                width: 50px;
+                height: 50px;
+                border-radius: 25px;
+                position: absolute;
+                margin-right: -150px;
+                top: 50%;
+              "
+            >
+              &nbsp;
             </div>
             <div
               style="
                 background-color: #ebebeb;
-                width: 148px;
-                height: 148px;
-                border-radius: 74px;
+                width: 220px;
+                height: 220px;
+                border-radius: 110px;
                 position: relative;
-                right: 99%;
+                right: 0;
                 top: 10px;
               "
             >
               &nbsp;
+              <div>
+                <img
+                  src="./assets/images/app.png"
+                  style="
+                    width: 200px;
+                    position: absolute;
+                    top: 100px;
+                    right: 100px;
+                  "
+                  alt="img"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -279,7 +326,7 @@
                 <a href="index.html">
                   <img
                     src="assets/images/footer-logo.png"
-                    style="width: 146px; height: 146px"
+                    class="img-w-146"
                     alt="Images"
                   />
                 </a>
