--- a/contact-us.html
+++ b/contact-us.html
@@ -92,7 +92,9 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="contact-us.html" class="nav-link"> تواصل معنا </a>
+                  <a href="contact-us.html" class="nav-link active">
+                    تواصل معنا
+                  </a>
                 </li>
 
                 <li class="nav-item">
@@ -111,6 +113,33 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-6 col-6">
+              <div
+                style="
+                  background-color: #60ba62;
+                  width: 50px;
+                  height: 50px;
+                  border-radius: 25px;
+                  position: absolute;
+                  margin-right: -150px;
+                  top: 50%;
+                "
+              >
+                &nbsp;
+              </div>
+              <div
+                style="
+                  background-color: #ebebeb;
+                  width: 250px;
+                  height: 250px;
+                  border-radius: 125px;
+                  margin: auto;
+                  position: absolute;
+                  top: 10px;
+                  margin-right: -100px;
+                "
+              >
+                &nbsp;
+              </div>
               <div class="contact-form">
                 <form id="contactForm">
                   <div class="row">
@@ -175,7 +204,49 @@
               </div>
             </div>
             <div class="col-lg-6 col-12">
-              <div>
+              <div
+                style="
+                  background-color: #60ba62;
+                  width: 50px;
+                  height: 50px;
+                  border-radius: 25px;
+                  position: absolute;
+                  margin-right: 484px;
+                  top: 20%;
+                "
+              >
+                &nbsp;
+              </div>
+
+              <div
+                style="
+                  background-color: #60ba62;
+                  width: 30px;
+                  height: 30px;
+                  border-radius: 15px;
+                  position: absolute;
+                  margin-right: 124px;
+                  top: 50%;
+                "
+              >
+                &nbsp;
+              </div>
+              <div
+                style="
+                  background-color: #ebebeb;
+                  width: 250px;
+                  height: 250px;
+                  border-radius: 125px;
+                  margin: auto;
+                  position: absolute;
+                  bottom: 110px;
+                  margin-right: 80px;
+                "
+              >
+                &nbsp;
+              </div>
+
+              <div style="display: block; position: relative">
                 <img class="contact-img" src="./assets/images/contact.png" />
               </div>
             </div>
@@ -279,7 +350,7 @@
                 <a href="index.html">
                   <img
                     src="assets/images/footer-logo.png"
-                    style="width: 146px; height: 146px"
+                    class="img-w-146"
                     alt="Images"
                   />
                 </a>
