--- a/customer-review.html
+++ b/customer-review.html
@@ -86,7 +86,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="customer-review.html" class="nav-link">
+                  <a href="customer-review.html " class="nav-link active">
                     آراء العملاء
                   </a>
                 </li>
@@ -279,7 +279,7 @@
                 <a href="index.html">
                   <img
                     src="assets/images/footer-logo.png"
-                    style="width: 146px; height: 146px"
+                    class="img-w-146"
                     alt="Images"
                   />
                 </a>
