--- a/faq.html
+++ b/faq.html
@@ -82,7 +82,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a href="faq.html" class="nav-link"> أسئلة شائعة؟ </a>
+                  <a href="faq.html" class="nav-link active"> أسئلة شائعة؟ </a>
                 </li>
 
                 <li class="nav-item">
@@ -355,7 +355,7 @@
                 <a href="index.html">
                   <img
                     src="assets/images/footer-logo.png"
-                    style="width: 146px; height: 146px"
+                    class="img-w-146"
                     alt="Images"
                   />
                 </a>
