--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a href="home.html" class="nav-link"> من نحن؟ </a>
+                  <a href="home.html" class="nav-link active"> من نحن؟ </a>
                 </li>
 
                 <li class="nav-item">
@@ -122,21 +122,13 @@
       <div class="container">
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
-            <div
-              style="position: absolute; left: 0px; bottom: 400px; z-index: 100"
-            >
-              <img
-                src="./assets/images/had.png"
-                style="width: 280px"
-                alt="img"
-              />
+            <div class="fea-img">
+              <img src="./assets/images/had.png" class="fea-w-280" alt="img" />
             </div>
-            <div
-              style="position: absolute; left: 0px; bottom: 100px; z-index: 100"
-            >
+            <div class="fea-hand-img">
               <img
                 src="./assets/images/hand.png"
-                style="width: 350px"
+                class="fea-hand-w"
                 alt="img"
               />
             </div>
@@ -156,65 +148,29 @@
         </div>
       </div>
 
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 5%;
-          top: 0%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #ebebeb;
-          width: 206px;
-          height: 206px;
-          border-radius: 103px;
-          position: relative;
-          right: 5%;
-          top: 40px;
-        "
-      >
-        &nbsp;
-      </div>
+      <div class="home-green-30">&nbsp;</div>
+      <div class="home-gray-30">&nbsp;</div>
     </div>
 
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="container">
-        <div style="position: absolute; left: 60px">
+        <div class="third-top-img">
           <img
             src="./assets/images/third-top.png"
-            style="width: 200px"
+            class="thi-t-img"
             alt="img"
           />
         </div>
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
-            <div
-              style="
-                background-color: #60ba62;
-                width: 30px;
-                height: 30px;
-                border-radius: 25px;
-                position: relative;
-                right: 0%;
-                top: 27px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="third-g-30">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
               <span class="header-text-second">أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
-              <div style="position: absolute; left: 50px; top: 150px">
+              <div class="fourth-img-des">
                 <img
                   src="./assets/images/fourth-img.png"
-                  style="width: 270px"
+                  class="fourth-w"
                   alt="img"
                 />
               </div>
@@ -223,60 +179,24 @@
                 المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
                 في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
               </p>
-              <div style="position: absolute; right: -60px; bottom: -120px">
+              <div class="fourth-des-text">
                 <img
                   src="./assets/images/fourth.png"
-                  style="width: 200px"
+                  class="fourth-des-width"
                   alt="img"
                 />
               </div>
-              <div
-                style="
-                  background-color: #60ba62;
-                  width: 20px;
-                  height: 20px;
-                  border-radius: 10px;
-                  position: absolute;
-                  left: -100px;
-                  bottom: 20px;
-                "
-              >
-                &nbsp;
-              </div>
+              <div class="img-green-home">&nbsp;</div>
             </div>
 
-            <div
-              style="
-                background-color: #ebebeb;
-                width: 148px;
-                height: 148px;
-                border-radius: 74px;
-                position: relative;
-                right: 99%;
-                top: 10px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="img-gray-home">&nbsp;</div>
           </div>
         </div>
       </div>
     </div>
     <div class="testimonials-area pb-100 mb-5">
       <div class="container">
-        <div
-          style="
-            background-color: #60ba62;
-            width: 30px;
-            height: 30px;
-            border-radius: 15px;
-            position: relative;
-            right: 5%;
-            top: 5%;
-          "
-        >
-          &nbsp;
-        </div>
+        <div class="fif-gr-30">&nbsp;</div>
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
@@ -302,39 +222,11 @@
             </p>
           </div>
         </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            right: 1%;
-            top: 0%;
-          "
-        >
+        <div class="fif-absolute-489">
           <img src="./assets/images/man.png" />
         </div>
-        <div
-          style="
-            background-color: #ebebeb;
-            width: 206px;
-            height: 206px;
-            border-radius: 103px;
-            position: relative;
-            right: 99%;
-            top: 10px;
-          "
-        >
-          &nbsp;
-        </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            left: 3%;
-            top: 0%;
-          "
-        >
+        <div class="fif-gray-206">&nbsp;</div>
+        <div class="fif-absolute-489-l">
           <img src="./assets/images/female.png" />
         </div>
       </div>
@@ -435,7 +327,7 @@
                 <a href="index.html">
                   <img
                     src="assets/images/footer-logo.png"
-                    style="width: 146px; height: 146px"
+                    class="img-w-146"
                     alt="Images"
                   />
                 </a>
