--- a/index.html
+++ b/index.html
@@ -107,64 +107,16 @@
     <!-- End Navbar Area -->
 
     <div class="featured-area pt-10 first-section">
-      <div style="position: absolute; left: 20px; top: 70px">
+      <div class="home-header">
         <img class="img-header" src="/assets/images/home-header.png" />
       </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 25%;
-          top: 15%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 10px;
-          height: 10px;
-          border-radius: 5px;
-          position: relative;
-          right: 15%;
-          top: 45%;
-        "
-      >
-        &nbsp;
-      </div>
+      <div class="green-30-25">&nbsp;</div>
+      <div class="green-10-15">&nbsp;</div>
       <div class="container slider-home text-center">Home <br />Made Food</div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 10px;
-          height: 10px;
-          border-radius: 5px;
-          position: relative;
-          right: 88%;
-          top: -5%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 80%;
-          top: 7%;
-        "
-      >
-        &nbsp;
-      </div>
+      <div class="green-10-88">&nbsp;</div>
+      <div class="green-30-80">&nbsp;</div>
 
-      <div style="position: relative; padding-right: 20px; bottom: 20%">
+      <div class="img-footer-relative">
         <img class="img-footer" src="/assets/images/home-header-bottom.png" />
       </div>
     </div>
@@ -173,19 +125,9 @@
       <div class="container">
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
-            <div
-              style="
-                background-color: #60ba62;
-                width: 50px;
-                height: 50px;
-                border-radius: 25px;
-                position: relative;
-                right: 97%;
-                top: -27px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="green-97-27 hide-mobile">&nbsp;</div>
+            <div class="green-30-5 hide-mobile">&nbsp;</div>
+            <div class="gray-206-5">&nbsp;</div>
             <div class="section-title text-center mt-rs-20">
               <span class="header-text">من نحن؟</span>
 
@@ -200,68 +142,26 @@
           </div>
         </div>
       </div>
-      <div
-        style="
-          background-color: #60ba62;
-          width: 30px;
-          height: 30px;
-          border-radius: 15px;
-          position: relative;
-          right: 5%;
-          top: 0%;
-        "
-      >
-        &nbsp;
-      </div>
-      <div
-        style="
-          background-color: #ebebeb;
-          width: 206px;
-          height: 206px;
-          border-radius: 103px;
-          position: relative;
-          right: 5%;
-          top: 40px;
-        "
-      >
-        &nbsp;
-      </div>
     </div>
 
     <div class="featured-area pt-100 mb-100 pb-70">
-      <div style="position: absolute; left: 0px; z-index: 100">
-        <img src="./assets/images/hand.png" style="width: 350px" alt="img" />
+      <div class="hand-absolute">
+        <img src="./assets/images/hand.png" class="w-350" alt="img" />
       </div>
       <div class="container">
-        <div style="position: absolute; left: 60px">
-          <img
-            src="./assets/images/third-top.png"
-            style="width: 200px"
-            alt="img"
-          />
+        <div class="absolute-l-60">
+          <img src="./assets/images/third-top.png" class="w-200" alt="img" />
         </div>
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
-            <div
-              style="
-                background-color: #60ba62;
-                width: 30px;
-                height: 30px;
-                border-radius: 25px;
-                position: relative;
-                right: 0%;
-                top: 27px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="green-30-0">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
               <span class="header-text-second">أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
-              <div style="position: absolute; left: 50px; top: 150px">
+              <div class="f-270-img">
                 <img
                   src="./assets/images/fourth-img.png"
-                  style="width: 270px"
+                  class="w-270"
                   alt="img"
                 />
               </div>
@@ -270,60 +170,24 @@
                 المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
                 في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
               </p>
-              <div style="position: absolute; right: -60px; bottom: -120px">
+              <div class="absolute-r-60">
                 <img
                   src="./assets/images/fourth.png"
-                  style="width: 200px"
+                  class="f-w-200"
                   alt="img"
                 />
               </div>
-              <div
-                style="
-                  background-color: #60ba62;
-                  width: 20px;
-                  height: 20px;
-                  border-radius: 10px;
-                  position: absolute;
-                  left: -100px;
-                  bottom: 20px;
-                "
-              >
-                &nbsp;
-              </div>
+              <div class="f-g-20">&nbsp;</div>
             </div>
 
-            <div
-              style="
-                background-color: #ebebeb;
-                width: 148px;
-                height: 148px;
-                border-radius: 74px;
-                position: relative;
-                right: 99%;
-                top: 10px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="f-gray-148">&nbsp;</div>
           </div>
         </div>
       </div>
     </div>
     <div class="testimonials-area pb-100 mb-5">
       <div class="container">
-        <div
-          style="
-            background-color: #60ba62;
-            width: 30px;
-            height: 30px;
-            border-radius: 15px;
-            position: relative;
-            right: 5%;
-            top: 5%;
-          "
-        >
-          &nbsp;
-        </div>
+        <div class="fif-gr-30">&nbsp;</div>
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
@@ -349,39 +213,11 @@
             </p>
           </div>
         </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            right: 1%;
-            top: 0%;
-          "
-        >
+        <div class="fif-absolute-489">
           <img src="./assets/images/man.png" />
         </div>
-        <div
-          style="
-            background-color: #ebebeb;
-            width: 206px;
-            height: 206px;
-            border-radius: 103px;
-            position: relative;
-            right: 99%;
-            top: 10px;
-          "
-        >
-          &nbsp;
-        </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            left: 3%;
-            top: 0%;
-          "
-        >
+        <div class="fif-gray-206">&nbsp;</div>
+        <div class="fif-absolute-489-l">
           <img src="./assets/images/female.png" />
         </div>
       </div>
@@ -482,7 +318,7 @@
                 <a href="index.html">
                   <img
                     src="assets/images/footer-logo.png"
-                    style="width: 146px; height: 146px"
+                    class="img-w-146"
                     alt="Images"
                   />
                 </a>
