--- a/customer-review.html
+++ b/customer-review.html
@@ -108,19 +108,7 @@
 
     <div class="testimonials-area pb-100 mb-5">
       <div class="container">
-        <div
-          style="
-            background-color: #60ba62;
-            width: 30px;
-            height: 30px;
-            border-radius: 15px;
-            position: relative;
-            right: 5%;
-            top: 5%;
-          "
-        >
-          &nbsp;
-        </div>
+        <div class="cus-green-30">&nbsp;</div>
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
@@ -146,39 +134,11 @@
             </p>
           </div>
         </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            right: 1%;
-            top: 0%;
-          "
-        >
+        <div class="cus-man">
           <img src="./assets/images/man.png" />
         </div>
-        <div
-          style="
-            background-color: #ebebeb;
-            width: 206px;
-            height: 206px;
-            border-radius: 103px;
-            position: relative;
-            right: 99%;
-            top: 10px;
-          "
-        >
-          &nbsp;
-        </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            left: 3%;
-            top: 0%;
-          "
-        >
+        <div class="cus-gray">&nbsp;</div>
+        <div class="cus-female">
           <img src="./assets/images/female.png" />
         </div>
       </div>
