--- a/faq.html
+++ b/faq.html
@@ -32,20 +32,7 @@
   </head>
   <body>
     <!-- Pre Loader -->
-    <!-- <div id="preloader">
-      <div id="preloader-area">
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-        <div class="spinner"></div>
-      </div>
-      <div class="preloader-section preloader-left"></div>
-      <div class="preloader-section preloader-right"></div>
-    </div> -->
+
     <!-- End Pre Loader -->
 
     <!-- Start Navbar Area -->
@@ -108,25 +95,13 @@
 
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="container">
-        <div style="position: absolute; left: 60px">
-          <img src="./assets/images/faq.png" style="width: 270px" alt="img" />
+        <div class="faq-img-absolute">
+          <img src="./assets/images/faq.png" class="faq-img-270" alt="img" />
         </div>
 
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
-            <div
-              style="
-                background-color: #60ba62;
-                width: 30px;
-                height: 30px;
-                border-radius: 25px;
-                position: relative;
-                right: 0%;
-                top: 27px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="faq-green-30 hide-mobile">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
               <span class="header-text-second-faq"> أسئلة شائعة ؟</span>
               <h1 class="des">هل HMF تطبيق لتوصيل الطعام؟</h1>
@@ -137,66 +112,30 @@
                 في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
               </p>
 
-              <div
-                style="
-                  background-color: #60ba62;
-                  width: 20px;
-                  height: 20px;
-                  border-radius: 10px;
-                  position: absolute;
-                  left: -100px;
-                  bottom: 20px;
-                "
-              >
-                &nbsp;
-              </div>
+              <div class="faq-g-20 hide-mobile">&nbsp;</div>
             </div>
-            <div style="position: absolute; right: -33px; bottom: 20px">
+            <div class="faq-fourth-img">
               <img
                 src="./assets/images/fourth.png"
-                style="width: 200px"
+                class="faq-img-200"
                 alt="img"
               />
             </div>
-            <div style="position: absolute; right: 84px; bottom: -65px">
+            <div class="faq-pic">
               <img
                 src="./assets/images/pic-faq.png"
-                style="width: 200px"
+                class="faq-pic-200"
                 alt="img"
               />
             </div>
-            <div
-              style="
-                background-color: #ebebeb;
-                width: 148px;
-                height: 148px;
-                border-radius: 74px;
-                position: relative;
-                right: 99%;
-                top: 10px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="faq-gray-148">&nbsp;</div>
           </div>
         </div>
       </div>
     </div>
     <div class="testimonials-area pb-100 mb-5">
       <div class="container">
-        <div
-          style="
-            background-color: #60ba62;
-            width: 30px;
-            height: 30px;
-            border-radius: 15px;
-            position: relative;
-            right: 5%;
-            top: 5%;
-          "
-        >
-          &nbsp;
-        </div>
+        <div class="faq-img-30">&nbsp;</div>
         <div class="section-title mb-45 slider-home-testimonial text-center">
           أراء العملاء
         </div>
@@ -222,39 +161,11 @@
             </p>
           </div>
         </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            right: 28%;
-            top: 0%;
-          "
-        >
+        <div class="faq-man-img">
           <img src="./assets/images/man.png" />
         </div>
-        <div
-          style="
-            background-color: #ebebeb;
-            width: 206px;
-            height: 206px;
-            border-radius: 103px;
-            position: relative;
-            right: 99%;
-            top: 10px;
-          "
-        >
-          &nbsp;
-        </div>
-        <div
-          style="
-            width: 489px;
-            height: 625px;
-            position: absolute;
-            left: 28%;
-            top: 0%;
-          "
-        >
+        <div class="faq-img-gray-206">&nbsp;</div>
+        <div class="img-489-faq-female">
           <img src="./assets/images/female.png" />
         </div>
       </div>
