--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="col-lg-12 col-md-12">
             <div class="green-97-27 hide-mobile">&nbsp;</div>
             <div class="green-30-5 hide-mobile">&nbsp;</div>
-            <div class="gray-206-5">&nbsp;</div>
+            <div class="gray-206-5 show-mobile">&nbsp;</div>
             <div class="section-title text-center mt-rs-20">
               <span class="header-text">من نحن؟</span>
 
@@ -139,6 +139,7 @@
                 صنعه الأيادي الماهرة.
               </p>
             </div>
+            <div class="gray-206-5 hide-mobile">&nbsp;</div>
           </div>
         </div>
       </div>
@@ -177,7 +178,7 @@
                   alt="img"
                 />
               </div>
-              <div class="f-g-20">&nbsp;</div>
+              <div class="f-g-20 hide-mobile">&nbsp;</div>
             </div>
 
             <div class="f-gray-148">&nbsp;</div>
