--- a/app.html
+++ b/app.html
@@ -108,119 +108,38 @@
 
     <div class="featured-area pt-100 mb-100 pb-70">
       <div class="container">
-        <div
-          style="
-            background-color: #60ba62;
-            width: 50px;
-            height: 50px;
-            border-radius: 25px;
-            position: absolute;
-            left: 5%;
-            top: 44%;
-          "
-        >
-          &nbsp;
-        </div>
-        <div
-          style="
-            background-color: #ebebeb;
-            width: 148px;
-            height: 148px;
-            border-radius: 74px;
-            position: absolute;
-            left: 75px;
-            top: 200px;
-          "
-        >
-          &nbsp;
-        </div>
-        <div style="position: absolute; left: 60px">
-          <img src="./assets/images/faq.png" style="width: 270px" alt="img" />
+        <div class="app-green-50">&nbsp;</div>
+        <div class="app-gray-148">&nbsp;</div>
+        <div class="app-absolute">
+          <img src="./assets/images/faq.png" class="app-img" alt="img" />
         </div>
 
         <div class="row align-items-center mb-45">
           <div class="col-lg-12 col-md-12">
-            <div
-              style="
-                background-color: #60ba62;
-                width: 30px;
-                height: 30px;
-                border-radius: 25px;
-                position: relative;
-                right: 0%;
-                top: 27px;
-              "
-            >
-              &nbsp;
-            </div>
+            <div class="app-green-30">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
               <div class="row">
                 <div class="col-lg-6">
-                  <h1
-                    style="
-                      font-size: 44px;
-                      color: #959494;
-                      font-family: 'SSTBold';
-                      text-align: center;
-                    "
-                  >
-                    متجر قوقل
-                  </h1>
+                  <h1 class="app-text-gray">متجر قوقل</h1>
                   <div class="">
                     <img class="google" src="./assets/images/google.png" />
                   </div>
                 </div>
                 <div class="col-lg-6">
-                  <h1
-                    style="
-                      font-size: 44px;
-                      color: #959494;
-                      font-family: 'SSTBold';
-                      text-align: center;
-                    "
-                  >
-                    متجر أبل
-                  </h1>
+                  <h1 class="app-gray-text-center">متجر أبل</h1>
                   <div class="">
                     <img class="apple" src="./assets/images/apple.png" />
                   </div>
                 </div>
               </div>
             </div>
-            <div
-              style="
-                background-color: #60ba62;
-                width: 50px;
-                height: 50px;
-                border-radius: 25px;
-                position: absolute;
-                margin-right: -150px;
-                top: 50%;
-              "
-            >
-              &nbsp;
-            </div>
-            <div
-              style="
-                background-color: #ebebeb;
-                width: 220px;
-                height: 220px;
-                border-radius: 110px;
-                position: relative;
-                right: 0;
-                top: 10px;
-              "
-            >
+            <div class="app-g-50">&nbsp;</div>
+            <div class="app-gray-200">
               &nbsp;
               <div>
                 <img
                   src="./assets/images/app.png"
-                  style="
-                    width: 200px;
-                    position: absolute;
-                    top: 100px;
-                    right: 100px;
-                  "
+                  class="app-gray-200-abs"
                   alt="img"
                 />
               </div>
