--- a/app.html
+++ b/app.html
@@ -119,13 +119,13 @@
             <div class="app-green-30">&nbsp;</div>
             <div class="section-title pt-100 text-center mt-rs-20">
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col">
                   <h1 class="app-text-gray">متجر قوقل</h1>
                   <div class="">
                     <img class="google" src="./assets/images/google.png" />
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col">
                   <h1 class="app-gray-text-center">متجر أبل</h1>
                   <div class="">
                     <img class="apple" src="./assets/images/apple.png" />
