--- a/app.html
+++ b/app.html
@@ -134,6 +134,7 @@
               </div>
             </div>
             <div class="app-g-50">&nbsp;</div>
+            <div class="app-g-10 show-mobile">&nbsp;</div>
             <div class="app-gray-200">
               &nbsp;
               <div>
