--- a/faq.html
+++ b/faq.html
@@ -116,24 +116,30 @@
             </div>
             <div class="faq-fourth-img">
               <img
+                src="./assets/images/home-three.png"
+                class="f-w-200 show-mobile"
+                alt="img"
+              />
+
+              <img
                 src="./assets/images/fourth.png"
-                class="faq-img-200"
+                class="faq-img-200 hide-mobile"
                 alt="img"
               />
             </div>
-            <div class="faq-pic">
+            <div class="faq-pic hide-mobile">
               <img
                 src="./assets/images/pic-faq.png"
                 class="faq-pic-200"
                 alt="img"
               />
             </div>
-            <div class="faq-gray-148">&nbsp;</div>
+            <div class="faq-gray-148 hide-mobile">&nbsp;</div>
           </div>
         </div>
       </div>
     </div>
-    <div class="testimonials-area pb-100 mb-5">
+    <div class="testimonials-area pb-100 hide-mobile mb-5">
       <div class="container">
         <div class="faq-img-30">&nbsp;</div>
         <div class="section-title mb-45 slider-home-testimonial text-center">
@@ -164,8 +170,47 @@
         <div class="faq-man-img">
           <img src="./assets/images/man.png" />
         </div>
-        <div class="faq-img-gray-206">&nbsp;</div>
+        <div class="faq-fif-grr-30 show-mobile">&nbsp;</div>
+
         <div class="img-489-faq-female">
+          <img src="./assets/images/female.png" />
+        </div>
+      </div>
+    </div>
+    <div class="testimonials-area show-mobile pb-100 mb-5">
+      <div class="container">
+        <div class="fif-gr-30">&nbsp;</div>
+        <div class="section-title mb-45 slider-home-testimonial text-center">
+          أراء العملاء
+        </div>
+        <div class="testimonials-slider owl-carousel owl-theme">
+          <div class="testimonials-item">
+            <img src="assets/images/pic.png" alt="testimonials" />
+
+            <p>
+              هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
+              هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
+              العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+              التطبيق.
+            </p>
+          </div>
+          <div class="testimonials-item">
+            <img src="assets/images/pic.png" alt="testimonials" />
+
+            <p>
+              هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد
+              هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو
+              العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
+              التطبيق.
+            </p>
+          </div>
+        </div>
+        <div class="fif-absolute-489">
+          <img src="./assets/images/man.png" />
+        </div>
+        <div class="fif-grr-30 show-mobile">&nbsp;</div>
+        <div class="fif-gray-206">&nbsp;</div>
+        <div class="fif-absolute-489-l">
           <img src="./assets/images/female.png" />
         </div>
       </div>
