--- a/home.html
+++ b/home.html
@@ -225,6 +225,7 @@
         <div class="fif-absolute-489">
           <img src="./assets/images/man.png" />
         </div>
+        <div class="fif-grr-30 show-mobile">&nbsp;</div>
         <div class="fif-gray-206">&nbsp;</div>
         <div class="fif-absolute-489-l">
           <img src="./assets/images/female.png" />
