--- a/index.html
+++ b/index.html
@@ -171,9 +171,16 @@
                 المنتجة خدمة التوصيل، نقوم بتسهيل عملية التواصل، وتنتهي معاناتك
                 في البحث عن طعام منزلي بجودة ممتازة بضغطة زر واحدة.
               </p>
-              <div class="absolute-r-60">
+              <div class="absolute-r-60 hide-mobile">
                 <img
                   src="./assets/images/fourth.png"
+                  class="f-w-200"
+                  alt="img"
+                />
+              </div>
+              <div class="absolute-r-60 show-mobile">
+                <img
+                  src="./assets/images/home-three.png"
                   class="f-w-200"
                   alt="img"
                 />
@@ -182,6 +189,7 @@
             </div>
 
             <div class="f-gray-148">&nbsp;</div>
+            <div class="fif-grr-10 show-mobile">&nbsp;</div>
           </div>
         </div>
       </div>
@@ -217,6 +225,7 @@
         <div class="fif-absolute-489">
           <img src="./assets/images/man.png" />
         </div>
+        <div class="fif-grr-30 show-mobile">&nbsp;</div>
         <div class="fif-gray-206">&nbsp;</div>
         <div class="fif-absolute-489-l">
           <img src="./assets/images/female.png" />
